--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "body-parser": "^1.17.1",
+    "decompress-zip": "^0.3.0",
     "express": "^4.15.2",
     "mongoose": "^4.9.6",
+    "multer": "^1.3.0",
     "request": "2.81.0"
   }
 }
