--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "express": "^4.15.2",
     "mongoose": "^4.9.6",
     "multer": "^1.3.0",
+    "mysql": "^2.13.0",
+    "ng": "0.0.0-rc6",
     "request": "2.81.0"
   }
 }
